# pixengeo

./: CMakeLists.txt  CMakePresets.json  README.md  vcpkg.json
app/: CMakeLists.txt
app/src/: main.cpp
examples/: CMakeLists.txt
examples/hello_project/: CMakeLists.txt  hello_project.h  pch.cpp  pch.h
examples/hello_project/res/: alien.tiled-project  alien.tiled-session  main_menu.tmx  room_01.tmx  room_02.tmx  room_03.tmx
libs/include/pixengeo/: config.h  core.h  graphics.h  math.h
libs/include/pixengeo/core/: engine.h  export.h
libs/include/pixengeo/graphics/: blend_mode.h  export.h  renderer.h  topology.h  vertex.h  window.h
libs/include/pixengeo/math/: circle.h  circle.inl  collide.h  collide.inl  distance.h  distance.inl  line.h  line.inl  matrix3x3.h  matrix3x3.inl  matrix_stack.h  matrix_stack.inl  rect.h  rect.inl  vector2.h  vector2.inl
libs/src/pixengeo/: CMakeLists.txt
libs/src/pixengeo/core/: CMakeLists.txt  command_line_info.h  composite_factory.cpp  composite_factory.h  engine.cpp  engine_impl.cpp  engine_impl.h  pch.h
libs/src/pixengeo/graphics/: CMakeLists.txt  glcheck.h  pch.cpp  pch.h  renderer.cpp  renderer_impl.cpp  renderer_impl.h  window.cpp  window_impl.cpp  window_impl.h
libs/src/pixengeo/map/: CMakeLists.txt  object.cpp  object.h  pch.h
libs/src/pixengeo/math/: CMakeLists.txt
