cmake_minimum_required(VERSION 3.24)
cmake_policy(SET CMP0167 NEW)

set(PROJECT_NAME pixengeo)
set(PROJECT_DESCRIPTION "Modern C++ cross-platform 2D game engine")
set(PROJECT_VERSION 1.0.0)
set(CMAKE_CXX_STANDARD 20)
set(CMAKE_CXX_STANDARD_REQUIRED ON)
set(CMAKE_CXX_EXTENSIONS OFF)
set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/bin)
set(CMAKE_LIBRARY_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/bin)
set(CMAKE_ARCHIVE_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/lib)

project(${PROJECT_NAME} 
	LANGUAGES CXX
	DESCRIPTION ${PROJECT_DESCRIPTION}
	VERSION ${PROJECT_VERSION}
)

add_subdirectory(app)
add_subdirectory(libs/src/pixengeo)
add_subdirectory(examples)